--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* .game {
+  display: flex;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.card {
+  background-color: lightblue;
+  width: 110%;
+}
+
+.cards {
+  display: flex;
+  justify-content: space-around;
+  gap: 50px;
+}
+
+.scoreboard {
+  height: 150px;
+  width: 200px;
+}
+
+.game {
+  display: flex;
+  gap: 20px;
+}
+
+.score-heading {
+  text-align: center;
+} */
+
+.play-game {
+  width: 100%;
+}
+
+.cards {
+  width: 50%;
 }
